<?xml version="1.0"?>
<package format="2">
  <name>hdmap_msgs</name>
  <version>0.0.1</version>
  <description>hdmap_msgs</description>


  <maintainer email="drfrily@gmail.com">Ivanov Leonid</maintainer>


  <license>TODO</license>



  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  
  </export>
</package>